[tool.poetry]
name = "dual-slit-platform"
version = "0.1.0"
description = ""
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
readme = "README.md"
packages = [{include = "dual_slit_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
